# Synthematics

./: .gitignore  CMakeLists.txt  GraphComponent.cpp  GraphComponent.h  LICENSE  MainComponent.cpp  MainComponent.h  MainEditor.cpp  MainEditor.h  MainSynth.cpp  MainSynth.h  README.md  Synth.cpp  Synth.h  WaveSound.cpp  WaveSound.h  ast.cpp  ast.h  equationException.cpp  equationException.h  lexer.cpp  lexer.h  main  main.cpp  parser.cpp  parser.h  token.cpp  token.h  unparseMath.cpp  unparseMath.h  unparser.cpp  unparser.h
Parser/: .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.h  eqast.cpp  eqast.h  equationException.cpp  equationException.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  token.h  unparseMath.cpp  unparseMath.h  unparser.cpp  unparser.h
src/: CMakeLists.txt  GraphComponent.h  MainEditor.cpp  MainEditor.h
src/Parser/: ast.cpp  eqast.cpp  equationException.h  lexer.cpp  parser.cpp  parser.h
